--- a/src/components/alg/alg-conspect/sp/pages/elem-sp3.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp3.html
@@ -354,11 +354,11 @@ int main() {
   <br>Ограничение по памяти 256мб</i></div>
 
   <p>Маленький Петя очень любит подарки. Недавно мама подарила ему новый ноутбук на Новый Год. Он тут же решил передарить его кому-то еще, ведь что может быть приятнее, чем дарить кому-то подарок. По этому случаю он организовал новогоднюю вечеринку у себя дома и пригласил туда n своих друзей.</p>
-  <p>Больше чем самому дарить подарки Петя любит только смотреть, как другие дарят подарки кому-либо. Так что ноутбук он припрятал до следующего Нового Года, а сам решил понаблюдать за процессом обмена подарками между своими друзьями, оставаясь в стороне. Он пронумеровал всех своих друзей целыми числами от 1 до n. Петя запомнил, что друг с номером i подарил подарок другу с номером pi. Он также запомнил, что каждому из его друзей достался ровно один подарок.</p>
+  <p>Больше чем самому дарить подарки Петя любит только смотреть, как другие дарят подарки кому-либо. Так что ноутбук он припрятал до следующего Нового Года, а сам решил понаблюдать за процессом обмена подарками между своими друзьями, оставаясь в стороне. Он пронумеровал всех своих друзей целыми числами от 1 до n. Петя запомнил, что друг с номером i подарил подарок другу с номером p<sub>i</sub>. Он также запомнил, что каждому из его друзей достался ровно один подарок.</p>
   <p>Теперь для каждого друга i Петя хочет узнать номер друга, который подарил ему подарок.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано одно целое число n (1 ≤ n ≤ 100) — количество приглашенных на вечеринку друзей Пети. Во второй строке записаны n целых чисел через пробел: i-ое число задает pi — номер друга, которому подарил подарок друг с номером i. Гарантируется, что каждый друг получил ровно один подарок. Возможно, что некоторые друзья не разделяют мнения Пети о приятности дарения подарков другим, а поэтому подарили подарок сами себе.</p>
+  <p>В первой строке записано одно целое число n (1 ≤ n ≤ 100) — количество приглашенных на вечеринку друзей Пети. Во второй строке записаны n целых чисел через пробел: i-ое число задает p<sub>i</sub> — номер друга, которому подарил подарок друг с номером i. Гарантируется, что каждый друг получил ровно один подарок. Возможно, что некоторые друзья не разделяют мнения Пети о приятности дарения подарков другим, а поэтому подарили подарок сами себе.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите n целых чисел, разделенных пробелом: i-ое число должно быть равно номеру друга, от которого получил подарок друг с номером i.</p>
@@ -383,6 +383,34 @@ int main() {
 1 2
 </pre>
   <code>1 2</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+
+  // решение
+  vector&lt;int&gt; A(n + 1), B(n + 1);
+  for (int i = 1; i &lt;= n; i++) {
+    cin >> A[i];
+    B[A[i]] = i;
+  }
+
+  // вывод результата
+  for (int i = 1; i &lt;= n; i++) {
+    cout &lt;&lt; B[i] &lt;&lt; " ";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -399,7 +427,7 @@ int main() {
   <h4>Входные данные</h4>
   <p>В первой строке задано целое число t (1≤t≤10<sup>4</sup>) — количество наборов входных данных.</p>
   <p>Первая строка набора входных данных содержит одно целое число n (1≤n≤2⋅10<sup>5</sup>) — количество элементов в массиве.</p>
-  <p>Вторая строка набора входных данных содержит n целых чисел a1,a2,…,an (1≤ai≤n) — элементы массива.</p>
+  <p>Вторая строка набора входных данных содержит n целых чисел a<sub>1</sub>,a<sub>2</sub>,…,a<sub>n</sub> (1≤a<sub>i</sub>≤n) — элементы массива.</p>
   <p>Гарантируется, что сумма n по всем наборам входных данных не превосходит 2⋅10<sup>5</sup>.</p>
 
   <h4>Выходные данные</h4>
@@ -449,6 +477,7 @@ using namespace std;
 int main() {
   int t;
   cin >> t;
+
   for (int test = 0; test &lt; t; test++) {
     int n;
     cin >> n;
@@ -469,6 +498,7 @@ int main() {
         res = i;
       }
     }
+
     cout &lt;&lt; res &lt;&lt; '\n';
   }
 }
@@ -485,7 +515,7 @@ int main() {
   <div><i>Ограничение по времени 2с
   <br>Ограничение по памяти 256мб</i></div>
 
-  <p>Перед вами стоит n спортсменов. Спортсмены пронумерованы от 1 до n слева направо. Про каждого спортсмена вы знаете его силу — спортсмен с номером i имеет силу s_i.</p>
+  <p>Перед вами стоит n спортсменов. Спортсмены пронумерованы от 1 до n слева направо. Про каждого спортсмена вы знаете его силу — спортсмен с номером i имеет силу s<sub>i</sub>.</p>
 
   <p>Вы хотите разделить всех спортсменов на две команды. В каждой команде должен быть хотя бы один спортсмен, и каждый спортсмен должен быть ровно в одной команде.</p>
 
@@ -500,12 +530,12 @@ int main() {
   <h4>Входные данные</h4>
   <p>В первой строке записано целое число t (1 &le; t &le; 1000) — количество наборов тестовых данных в тесте. Далее записаны t наборов тестовых данных.</p>
   <p>Каждый набор состоит из двух строк. В первой строке содержится целое положительное число n (2 &lt; n &le; 50) — количество спортсменов.</p>
-  <p>В следующей строке содержится n положительных целых чисел s_1, s_2, ... , s_n (1 &le; s_i &le; 1000), где s_i — это сила i-го спортсмена. Обратите внимание, что среди элементов массива s могут быть равные значения.</p>
+  <p>В следующей строке содержится n положительных целых чисел s<sub>1</sub>, s<sub>2</sub>, ... , s<sub>n</sub> (1 &le; s<sub>i</sub> &le; 1000), где s<sub>i</sub> — это сила i-го спортсмена. Обратите внимание, что среди элементов массива s могут быть равные значения.</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора тестовых данных выведите одно целое число — минимальное значение величины |max(A) - min(B)| при оптимальном разбиении всех спортсменов на команды. Каждый из спортсменов должен оказаться членом ровно одной из двух команд.</p>
 
-  <h4>Пример</h4>
+  <h4>Пример 1</h4>
 <pre>
 5
 5
@@ -526,7 +556,74 @@ int main() {
 999
 50
 </pre>
-  <p>Первый набор тестовых данных разобран в условии. Во втором наборе одно из оптимальных разбиений имеет вид A=[2, 1], B=[3, 2, 4, 3], поэтому ответ равен |2-2|=0.</p>
+  <p>Первый набор тестовых данных разобран в условии.</p>
+  <p>Во втором наборе одно из оптимальных разбиений имеет вид A=[2, 1], B=[3, 2, 4, 3], поэтому ответ равен |2-2|=0.</p>
+
+  <h4>Пример 2</h4>
+<pre>
+1
+4
+7 9 3 1
+</pre>
+  <code>2</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Из всех чисел нужно найти два числа с минимальной разницей. Если есть два одинаковых числа, то ответ будет 0, иначе ответом будет модуль разницы двух самых близких чисел</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+#include &lt;climits&gt;  // для INT_MAX
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int t;
+  cin >> t;
+
+  for (int test = 0; test &lt; t; test++) {
+    int n;
+    cin >> n;
+    vector&lt;int&gt; A(n);
+    for (int i = 0; i &lt; n; i++) {
+      cin >> A[i];
+    }
+
+    // Проверка на дубликаты
+    vector&lt;int&gt; B(1001, 0);
+    bool has_duplicate = false;
+    for (int i = 0; i &lt; n; i++) {
+      if (B[A[i]]) {
+        has_duplicate = true;
+        break;
+      } else {
+        B[A[i]] = 1;
+      }
+    }
+
+    if (has_duplicate) {
+      cout &lt;&lt; 0 &lt;&lt; '\n';
+      continue;  // Переходим к следующему тестовому случаю
+    }
+
+    // Поиск минимальной разницы
+    // Сортируем массив для поиска минимальной разницы
+    sort(A.begin(), A.end());
+    int min_dif = INT_MAX;
+    for (int i = 1; i &lt; n; i++) {
+      min_dif = min(min_dif, A[i] - A[i - 1]);
+    }
+
+    // Вывод результата
+    cout &lt;&lt; min_dif &lt;&lt; '\n';
+  }
+
+  return 0;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -578,7 +675,7 @@ NO
     <p>Сумма чет+чет делится на 2. Сумма нечет+нечет делится на 2. Сумма чет+нечет не делится на 2.</p>
     <p>Нужно узнать сколько нечетных чисел. Если все числа четные, то сумма будет четная при любых преобразованиях. Если все числа нечетные, то сумма будет четная если их четное количество, сумма будет нечетная если их нечетное количество. Если есть четные и нечетные числа, то преобразовывая нечетные в четные оставим одно нечетное число чтобы получить нечетную сумму.</p>
 <pre>
-#include <iostream>
+#include &lt;iostream&gt;
 
 using namespace std;
 
@@ -616,14 +713,14 @@ int main() {
   <div><i>Ограничение по времени 2с
   <br>Ограничение по памяти 256мб</i></div>
 
-  <p>Маленький мальчик Вася очень любит апельсиновый сок, и поэтому в любом продукте и напитке у него на кухне обязательно содержится апельсиновый сок. В его холодильнике хранятся n напитков, объемная доля апельсинового сока в i-ом напитке составляет pi процентов.</p>
+  <p>Маленький мальчик Вася очень любит апельсиновый сок, и поэтому в любом продукте и напитке у него на кухне обязательно содержится апельсиновый сок. В его холодильнике хранятся n напитков, объемная доля апельсинового сока в i-ом напитке составляет p<sub>i</sub> процентов.</p>
 
   <p>Однажды Вася решил приготовить себе апельсиновый коктейль, и для этого он взял в равных пропорциях каждого из n напитков и смешал. После этого ему стало интересно, как много апельсинового сока содержится в его коктейле.</p>
 
   <p>Найдите объемную долю апельсинового сока в получившемся напитке.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке входного файла содержится единственное целое число n (1 ≤ n ≤ 100) — количество апельсиновых напитков в холодильнике у Васи. Во второй строке находятся n целых чисел pi (0 ≤ pi ≤ 100) — объемная доля в процентах апельсинового сока в i-ом напитке. Числа разделены пробелом.</p>
+  <p>В первой строке входного файла содержится единственное целое число n (1 ≤ n ≤ 100) — количество апельсиновых напитков в холодильнике у Васи. Во второй строке находятся n целых чисел p<sub>i</sub> (0 ≤ p<sub>i</sub> ≤ 100) — объемная доля в процентах апельсинового сока в i-ом напитке. Числа разделены пробелом.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите объемную долю в процентах апельсинового сока в коктейле Васи. Ответ будет считаться верным, если его абсолютная или относительная погрешность не превышает 10<sup>-4</sup>.</p>
@@ -642,6 +739,34 @@ int main() {
 0 25 50 75
 </pre>
   <code>37.500000000000</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+
+  int temp;
+  int sum = 0;
+  for (int i = 0; i &lt; n; i++) {
+    cin >> temp;
+    sum += temp;
+  }
+
+  // решение
+  double res = (double) sum / n;
+
+  // Вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -655,16 +780,16 @@ int main() {
 
   <p>На кольцевой линии берляндского метро расположено n станций. Известны расстояния между всеми парами соседних станций:</p>
   <ul>
-    <li>d1 — расстояние между 1-ой и 2-ой станцией;</li>
-    <li>d2 — расстояние между 2-ой и 3-ой станцией;</li>
+    <li>d<sub>1</sub> — расстояние между 1-ой и 2-ой станцией;</li>
+    <li>d<sub>2</sub> — расстояние между 2-ой и 3-ой станцией;</li>
     <li>...</li>
-    <li>dn-1 — расстояние между n-1-ой и n-ой станцией;</li>
-    <li>dn — расстояние между n-ой и 1-ой станцией.</li>
+    <li>d<sub>n-1</sub> — расстояние между n-1-ой и n-ой станцией;</li>
+    <li>d<sub>n</sub> — расстояние между n-ой и 1-ой станцией.</li>
   </ul>
   <p>Поезда ходят по кольцевой линии в обоих направлениях. Найдите кратчайшее расстояние между станциями с номерами s и t.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано целое число n (3 ≤ n ≤ 100) — количество станций на кольцевой линии. Во второй строке записано n целых чисел d1, d2, ..., dn (1 ≤ di ≤ 100) — расстояния между парами соседних станций. В третьей строке записано два целых числа s и t (1 ≤ s, t ≤ n) — номера станций, между которыми требуется найти кратчайшее расстояние. Эти номера могут совпадать.</p>
+  <p>В первой строке записано целое число n (3 ≤ n ≤ 100) — количество станций на кольцевой линии. Во второй строке записано n целых чисел d<sub>1</sub>, d<sub>2</sub>, ..., d<sub>n</sub> (1 ≤ d<sub>i</sub> ≤ 100) — расстояния между парами соседних станций. В третьей строке записано два целых числа s и t (1 ≤ s, t ≤ n) — номера станций, между которыми требуется найти кратчайшее расстояние. Эти номера могут совпадать.</p>
   <p>Числа в строках разделяются одиночными пробелами.</p>
 
   <h4>Выходные данные</h4>
@@ -703,6 +828,54 @@ int main() {
 </pre>
   <code>0</code>
   <p>В четвертом примере номера станций совпадают, поэтому кратчайшее расстояние равно 0</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+    vector&lt;int&gt; A(n+1, 0);
+  for (int i = 1; i &lt;= n; i++) {
+    cin >> A[i];
+  }
+  int s, t;
+  cin >> s >> t;
+
+  // решение
+  int dist_right = 0;
+  int dist_left = 0;
+  int dist;
+  int s1 = s;
+  while (s1 != t) {
+    dist_right += A[s1];
+    s1++;
+    if (s1 == n + 1) {
+      s1 = 1;
+    }
+  }
+  int t1 = t;
+  while (t1 != s) {
+    dist_left += A[t1];
+    t1++;
+    if (t1 == n + 1) {
+      t1 = 1;
+    }
+  }
+  dist = min(dist_right, dist_left);
+
+  // Вывод результата
+  cout &lt;&lt; dist;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -716,7 +889,7 @@ int main() {
 
   <p>Уитли решил попробовать себя в создании тестовых камер. Он создал отличную камеру, но в ней не хватало лишь одной детали — кубов.</p>
   <p>В камеру необходимо было доставить n кубов. i-й куб имеет объем a<sub>i</sub>.</p>
-  <p>Уитли необходимо расставить кубы так, чтобы они были отсортированы в порядке неубывания объема. Строго говоря, для каждого i>1 должно выполняться условие a<syb>i-1</syb>≤a<sub>i</sub>.</p>
+  <p>Уитли необходимо расставить кубы так, чтобы они были отсортированы в порядке неубывания объема. Строго говоря, для каждого i>1 должно выполняться условие a<sub>i-1</sub>≤a<sub>i</sub>.</p>
   <p>Для этого Уитли может менять местами две соседние кубы, то есть для любого i>1 можно поменять местами кубы на позициях i-1
    и i.</p>
   <p>Проблема в том, что Уитли нетерпелив. Если ему придется сделать больше, чем n⋅(n-1)/2-1 операций обмена, он не захочет делать столь нудную работу.</p>
@@ -751,6 +924,100 @@ NO
   <p>В первом наборе входных данных возможно отсортировать все кубы, используя 7 операций обмена.</p>
   <p>Во втором наборе входных данных все кубы уже отсортированы.</p>
   <p>В третьем наборе входных данных мы можем сделать 0 обменов, однако кубы еще не отсортированы, поэтому отсортировать мы их не можем.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+// Функция для подсчета инверсий с помощью сортировки слиянием
+long long mergeAndCount(vector&lt;int&gt;& arr, vector&lt;int&gt;& temp, int left, int mid, int right) {
+  int i = left;    // Индекс для левой половины
+  int j = mid + 1; // Индекс для правой половины
+  int k = left;    // Индекс для временного массива
+  long long invCount = 0;
+
+  // Слияние двух половин с подсчетом инверсий
+  while (i &lt;= mid && j &lt;= right) {
+    if (arr[i] &lt;= arr[j]) {
+      temp[k++] = arr[i++];
+    } else {
+      temp[k++] = arr[j++];
+      invCount += (mid - i + 1); // Все элементы от i до mid образуют инверсии с arr[j]
+    }
+  }
+
+  // Копирование оставшихся элементов левой половины
+  while (i &lt;= mid) {
+    temp[k++] = arr[i++];
+  }
+
+  // Копирование оставшихся элементов правой половины
+  while (j &lt;= right) {
+    temp[k++] = arr[j++];
+  }
+
+  // Копирование отсортированного временного массива обратно в arr
+  for (i = left; i &lt;= right; i++) {
+    arr[i] = temp[i];
+  }
+
+  return invCount;
+}
+
+// Рекурсивная функция для сортировки слиянием и подсчета инверсий
+long long countInversions(vector&lt;int&gt;& arr, vector&lt;int&gt;& temp, int left, int right) {
+  long long invCount = 0;
+  if (left &lt; right) {
+    int mid = left + (right - left) / 2;
+
+    // Рекурсивный подсчет инверсий в левой и правой половинах
+    invCount += countInversions(arr, temp, left, mid);
+    invCount += countInversions(arr, temp, mid + 1, right);
+
+    // Подсчет инверсий при слиянии двух половин
+    invCount += mergeAndCount(arr, temp, left, mid, right);
+  }
+  return invCount;
+}
+
+int main() {
+  ios::sync_with_stdio(false);
+  cin.tie(nullptr);
+
+  int t;
+  cin >> t;
+
+  while (t--) {
+    int n;
+    cin >> n;
+    vector&lt;int> a(n);
+    for (int i = 0; i &lt; n; i++) {
+      cin >> a[i];
+    }
+
+    // Максимальное количество обменов
+    long long maxSwaps = (long long)n * (n - 1) / 2 - 1;
+
+    // Подсчет инверсий
+    vector&lt;int> temp(n);
+    long long invCount = countInversions(a, temp, 0, n - 1);
+
+    // Проверка условия
+    if (invCount &lt;= maxSwaps) {
+      cout &lt;&lt; "YES\n";
+    } else {
+      cout &lt;&lt; "NO\n";
+    }
+  }
+
+  return 0;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -790,29 +1057,31 @@ NO
 using namespace std;
 
 int main() {
-    const int len = 6;
-    int Arr[len];
-    for (int i = 0; i &lt; len; i++) {
-      cin >> Arr[i];
+  const int len = 6;
+  int Arr[len];
+  for (int i = 0; i &lt; len; i++) {
+    cin >> Arr[i];
+  }
+  bool flag = false;
+  int sum = Arr[0] + Arr[1] + Arr[2] + Arr[3] + Arr[4] + Arr[5];
+  int tmp = 0;
+
+  for (int i1 = 0; i1 &lt; 6; i1++) {
+    for (int i2 = i1 + 1; i2 &lt; 6; i2++) {
+      for (int i3 = i2 + 1; i3 &lt; 6; i3++) {
+        tmp = Arr[i1] + Arr[i2] + Arr[i3];
+        if (tmp == sum - tmp)
+          flag = true;
+      }
     }
-	bool flag = false;
-	int sum = Arr[0] + Arr[1] + Arr[2] + Arr[3] + Arr[4] + Arr[5];
-	int tmp = 0;
-	for (int i1 = 0; i1 &lt; 6; i1++) {
-		for (int i2 = i1 + 1; i2 &lt; 6; i2++) {
-			for (int i3 = i2 + 1; i3 &lt; 6; i3++) {
-				tmp = Arr[i1] + Arr[i2] + Arr[i3];
-				if (tmp == sum - tmp)
-					flag = true;
-			}
-		}
-	}
-	if (flag == true) {
-		cout &lt;&lt; "YES";
-	}
-	else {
-		cout &lt;&lt; "NO";
-	}
+  }
+
+  if (flag == true) {
+    cout &lt;&lt; "YES";
+  }
+  else {
+    cout &lt;&lt; "NO";
+  }
 }
 </pre>
   </details>
