--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -12,7 +12,8 @@
   <p>(16 сентября 2024 - 25 мая 2025)</p>
 
   <p>Лекции проходят в главном корпусе ВГУ</p>
-  <p>Аудитории 435 по понедельникам с 18.40 до 20.00</p>
+  <p>2024. Аудитория 435, по понедельникам с 18.40 до 20.00</p>
+  <p>2025. Аудитория 329, по вторникам с 18.40 до 20.00</p>
   <p>Преподаватель - Коток Игорь Дмитриевич</p>
   <p>Факультет ПММ</p>
 </article>
@@ -35,5 +36,6 @@
   <p><a href="lec-10.html" class="js-dsr-lecture">Лекция 10 (16.12.2024)</a></p>
   <p><a href="lec-11.html" class="js-dsr-lecture">Лекция 11 (23.12.2024)</a></p>
   <p><a href="lec-12.html" class="js-dsr-lecture">Лекция 12 (11.02.2025)</a></p>
+  <p><a href="lec-13.html" class="js-dsr-lecture">Лекция 13 (18.02.2025)</a></p>
 </article>
 
